dev/05-message-brokers/emqx-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emqx-test
  labels:
    app: emqx
    component: broker-test
    environment: dev
